--- a/src/app/mavis/mavis.component.html
+++ b/src/app/mavis/mavis.component.html
@@ -6,7 +6,7 @@
 <!-- Caixa de chat -->
 <div *ngIf="showChat" class="chat-box">
     <div class="chat-header">
-        <span>Chat</span>
+        <span>Chats</span>
         <button mat-icon-button (click)="toggleChat()">X</button>
     </div>
     <div class="chat-body">
